# pysparse

./: .gitignore  CMakeLists.txt  README.md  __init__.pyi  main.cc  pybind.cc  setup.py  test.py
python_objects/: PyShape.hpp  PySparseMatrix.hpp  PyView.hpp  exceptions.hpp  header.hpp
source/: Shape.hpp  SparseMatrix.hpp  SparseMatrix.tcc  SparseMatrixImpl.hpp  SparseMatrixImpl.tcc  SparseStructure.hpp  SparseStructure.tcc  View.hpp  View.tcc
